update name ref

--- a/root/Makefile
+++ b/root/Makefile
@@ -9,10 +9,10 @@ install:
 
 build:
 	@echo "compiling..."
-	@rm <% name %>.html
-	@rm <% name %>.css
-	@jade < /src/<% name %>.jade > ./<% name %>.html
-	@coffee < /src/<% name %>.coffee -o ./<% name %>.js
+	@rm <%= name %>.html
+	@rm <%= name %>.css
+	@jade < /src/<%= name %>.jade > ./<%= name %>.html
+	@coffee < /src/<%= name %>.coffee -o ./<%= name %>.js
 	@echo "done!"
 
 .PHONY: install
