--- a/root/.editorconfig
+++ b/root/.editorconfig
@@ -9,3 +9,8 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
+
+[Makefile]
+trim_trailing_whitespace = true
+indent_style = tab
+indent_size = 2
